--- a/app/src/main/res/layout/activity_evenement.xml
+++ b/app/src/main/res/layout/activity_evenement.xml
@@ -6,13 +6,277 @@
     android:layout_height="match_parent"
     tools:context=".EvenementActivity">
 
-    <Button
-        android:id="@+id/button4"
+
+    <TextView
+        android:id="@+id/text_ajout_evenement"
+        android:layout_width="336dp"
+        android:layout_height="102dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="36dp"
+        android:drawableStart="@drawable/evenement"
+        android:gravity="left|center_vertical"
+        android:text="@string/title_creer_un_evenement"
+        android:textColor="@color/c3"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider_evenement"
+        android:layout_width="180dp"
+        android:layout_height="1dp"
+        android:layout_below="@+id/text_ajout_evenement"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="false"
+        android:background="@color/c3"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/text_ajout_evenement"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintStart_toStartOf="@+id/text_ajout_evenement"
+        app:layout_constraintTop_toTopOf="@+id/text_ajout_evenement"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <RelativeLayout
+        android:id="@+id/evenement_formulaire_contenair"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Evenement"
+        android:layout_below="@+id/divider_evenement"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="11dp"
+        android:background="@drawable/roud_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_ajout_evenement">
+
+
+        //libelle
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/libelle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:hint="@string/title_hint_type_ajout_libele"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        // type
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/libelle"
+                android:hint="@string/title_hint_type_ajout_evenement"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+        //Description
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="155dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/type"
+                android:hint="@string/title_hint_type_ajout_description"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //Heure
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="225dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/heure"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/description"
+                android:hint="@string/title_hint_type_ajout_heure"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //Date
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="290dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/heure"
+                android:hint="@string/date_limite_evenement"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //Lieu
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="355dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/lieu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/date"
+                android:hint="@string/title_hint_type_ajout_lieu"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        //Cotisation
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="251dp"
+            android:layout_height="60dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="420dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/bordure"
+            android:textColorHint="#004D40"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/cotisation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lieu"
+                android:hint="@string/title_hint_type_ajout_cotisation"
+                android:textColorHint="#004D40" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </RelativeLayout>
+
+    <Button
+
+        android:id="@+id/boutonevenement"
+        android:layout_width="218dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/evenement_formulaire_contenair"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="17dp"
+        android:background="@drawable/roud_background"
+        android:gravity="center"
+        android:text="valider"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/evenement_formulaire_contenair"
+        app:layout_constraintVertical_bias="0.962" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
