--- a/app/src/main/res/layout/activity_rappel.xml
+++ b/app/src/main/res/layout/activity_rappel.xml
@@ -1,42 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RappelActivity">
+    tools:context=".Rappel.RappelParent">
 
     <TextView
         android:id="@+id/text_faire_lappel"
-        android:layout_width="191dp"
+        android:layout_width="124dp"
         android:layout_height="wrap_content"
 
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="36dp"
-        android:text="@string/title_faire_lappel"
-        android:textColor="@color/c3"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.722"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.031" />
-
-    <View
-        android:id="@+id/divider_rappel"
-        android:layout_width="180dp"
-        android:layout_height="1dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="132dp"
-        android:background="@color/c3"
-        android:foregroundGravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/text_faire_lappel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_faire_lappel"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="150dp"
+        android:text="@string/title_faire_lappel"
+        android:textColor="@color/c3"
+        android:textSize="24sp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rappelRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="631dp"
+        android:layout_below="@+id/divider"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp" />
+
+
+</RelativeLayout>
