--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="c1">#65c69d</color>
     <color name="c2">#666f78</color>
     <color name="c3">#0B0E10</color>
+    <color name="colorBlue">#3D7E24</color>
+    <color name="colorBlueT">#37A793</color>
+    <color name="colorPurple">#006064</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorPurpleT">#7232BB2A</color>
 </resources>
