--- a/app/src/main/res/layout/activity_ajout_observations.xml
+++ b/app/src/main/res/layout/activity_ajout_observations.xml
@@ -123,7 +123,7 @@
             android:layout_marginTop="36dp"
             android:layout_marginEnd="25dp"
             android:onClick="eleveButton"
-            android:text="Choisir" />
+            android:text="@string/choisir_eleve" />
 
 
     </RelativeLayout>
